added custom player controller

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,9 +6,8 @@
 
         <link rel=stylesheet type=text/css   href="{{ url_for('static', filename='style.css') }}">
         <script type=text/javascript src="{{url_for('static', filename='jquery-3.2.1.min.js') }}"></script>
-        <script type=text/javascript>
-            $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
-        </script>
+        <script type=text/javascript src="{{url_for('static', filename='player.js') }}"></script>
+  
     </head>
     <body>
         {% block script %}
